--- a/index.html
+++ b/index.html
@@ -3,33 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>C L O X</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap" rel="stylesheet">
 </head>
 <body>
- <div class="container">
-    <section class="slide slide1">
-      <nav class="nav navleft">
-        <a href="#" class="link">About</a>
-        <a href="#" class="link">Products</a>
-        <a href="#" class="link">#####</a>
-      </nav>
+    <div class="slide">
 
-      <div class="shop-name">
-        <h1>CLOX</h1>
-        <h2>ACCESSORIES</h2>
-      </div>
+        <div class="slides slide1">
 
-      <nav class="nav navright">
-        <a href="#" class="link">Contact us</a>
-      </nav>
-    </section>
+            <header>
+                <a href=""><h1>CLOX</h1>
+                <p>accessories</p></a>
+            </header>
+            <nav class="navbar">
+                <a href="" class="links">About</a>
+                <a href="" class="links">Shop</a>
+                <a href="" class="links">#####</a>
+                <a href="" class="links">Contact</a>
+            </nav>
+            <div class="signbtn"><p> Sign Up</p></div>
+            <div class="midtext">
+                <p>STYLE IS A HABIT</p>
+            </div>
+            <div class="minitext">
+                <p>Pure materials. Honest designs.</p>
+            </div>
 
-    <section class="slide slide2"></section>
-    <section class="slide slide3"></section>
-  </div>
+                <img src="profilo1.jpg" alt="" id="img1">
+                <img src="sneaker1.jpg" alt="" id="img2">
+                <img src="shirt1.png" alt="" id="img3">
+
+                <img src="icon1.png" alt="" class="icons" id="icon1">
+                <img src="icon2.png" alt="" class="icons" id="icon3">
+                <img src="icon3.jpg" alt="" class="icons" id="icon2">
+
+                <p id="review"><a href="">3 Reviews</a></p>
+        </div>
+
+
+        <div class="slides slide2"> Content</div>
+        <div class="slides slide3"> Content</div>
+    </div>
 </body>
 </html>
