--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <p>Pure materials. Honest designs.</p>
             </div>
 
-                <img src="profilo1.jpg" alt="" id="img1">
-                <img src="sneaker1.jpg" alt="" id="img2">
-                <img src="shirt1.png" alt="" id="img3">
+                <img src="images/profilo1.jpg" alt="" id="img1">
+                <img src="images/sneaker1.jpg" alt="" id="img2">
+                <img src="images/shirt1.png" alt="" id="img3">
 
-                <img src="icon1.png" alt="" class="icons" id="icon1">
-                <img src="icon2.png" alt="" class="icons" id="icon3">
-                <img src="icon3.jpg" alt="" class="icons" id="icon2">
+                <img src="images/icon1.png" alt="" class="icons" id="icon1">
+                <img src="images/icon2.png" alt="" class="icons" id="icon3">
+                <img src="images/icon3.jpg" alt="" class="icons" id="icon2">
 
                 <p id="review"><a href="">3 Reviews</a></p>
         </div>
