--- a/index.html
+++ b/index.html
@@ -7,42 +7,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="slide">
+    <div class="slidecontainer">
 
         <div class="slides slide1">
 
-            <header>
+           <header>
                 <a href=""><h1>CLOX</h1>
                 <p>accessories</p></a>
             </header>
-            <nav class="navbar">
-                <a href="" class="links">About</a>
-                <a href="" class="links">Shop</a>
-                <a href="" class="links">#####</a>
-                <a href="" class="links">Contact</a>
+
+            <h3 class="header2">STYLE IS A HABIT</h3>
+            <p class="header3">Pure materials. Honest designs.</p>
+
+            <nav>
+            <a href="#" class="links">About</a>
+            <a href="#" class="links">Shop</a>
+            <a href="#" class="links">#####</a>
+            <a href="#" class="links">Contact</a>
             </nav>
-            <div class="signbtn"><p> Sign Up</p></div>
-            <div class="midtext">
-                <p>STYLE IS A HABIT</p>
-            </div>
-            <div class="minitext">
-                <p>Pure materials. Honest designs.</p>
-            </div>
+            
+            <p id="signbtn"><a href="">Sign Up</a></p>
 
-                <img src="images/profilo1.jpg" alt="" id="img1">
-                <img src="images/sneaker1.jpg" alt="" id="img2">
-                <img src="images/shirt1.png" alt="" id="img3">
-
-                <img src="images/icon1.png" alt="" class="icons" id="icon1">
-                <img src="images/icon2.png" alt="" class="icons" id="icon3">
-                <img src="images/icon3.jpg" alt="" class="icons" id="icon2">
-
-                <p id="review"><a href="">3 Reviews</a></p>
+            <div class="iconcontainer">
+            <img src="images/icon1.png" alt="" class="icons">
+            <img src="images/icon2.png" alt="" class="icons">
+            <img src="images/icon3.jpg" alt="" class="icons">
+        </div>
+        <div class="imgcontainer">
+            <img src="images/handbag1.png" alt="" class="images">
+            <img src="images/shirt1.png" alt="" class="images">
+            <img src="images/sneaker1.jpg" alt="" class="images">
+            <img src="images/bag1.jpg" alt="" class="images">
+            <img src="images/pendant1.jpg" alt="" class="images">
         </div>
 
 
-        <div class="slides slide2"> Content</div>
-        <div class="slides slide3"> Content</div>
+        <div class="slides slide2"></div>
+        <div class="slides slide3"></div>
     </div>
 </body>
 </html>
